Refactor Wreck Riff gameplay and release implementation